update ue config for openxg 5gc

--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/ue.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/ue.conf
@@ -1,8 +1,9 @@
 uicc0 = {
-imsi = "2089900007487";
-key = "fec86ba6eb707ed08905757b1bb44b8f";
-opc= "C42449363BBAD02B66D16BC975D77CC1";
-dnn= "oai";
+imsi = "466920000000001";
+key = "00112233445566778899aabbccddeeff";
+opc= "000102030405060708090a0b0c0d0e0f";
+dnn= "internet";
 nssai_sst=1;
-nssai_sd=1;
+nssai_sd=0;
 }
+
