modify config file, add one more for n310

--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.n310.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.n310.conf
@@ -222,22 +222,27 @@ L1s = (
 );
 
 RUs = (
-{
-  local_rf       = "yes"
-  nb_tx          = 1
-  nb_rx          = 1
-  att_tx         = 85
-  att_rx         = 0;
-  bands          = [78];
-  max_pdschReferenceSignalPower = -27;
-  max_rxgain                    = 65;
-  sf_extension                  = 0;
-  eNB_instances  = [0];
-  #beamforming 1x4 matrix:
-  bf_weights = [0x00007fff, 0x0000, 0x0000, 0x0000];
-  sdr_addrs = "dev=pciex:0,auxdac1=340";
-  clock_src = "internal";
-}
+    {
+       local_rf       = "yes"
+         nb_tx          = 1
+         nb_rx          = 1
+         att_tx         = 0
+         att_rx         = 0;
+         bands          = [78];
+         max_pdschReferenceSignalPower = -27;
+         max_rxgain                    = 75;
+         eNB_instances  = [0];
+         ##beamforming 1x2 matrix: 1 layer x 2 antennas
+         bf_weights = [0x00007fff, 0x0000];
+         ##beamforming 1x4 matrix: 1 layer x 4 antennas
+         #bf_weights = [0x00007fff, 0x0000,0x0000, 0x0000];
+         ## beamforming 2x2 matrix:
+         # bf_weights = [0x00007fff, 0x00000000, 0x00000000, 0x00007fff];
+         ## beamforming 4x4 matrix:
+         #bf_weights = [0x00007fff, 0x0000, 0x0000, 0x0000, 0x00000000, 0x00007fff, 0x0000, 0x0000, 0x0000, 0x0000, 0x00007fff, 0x0000, 0x0000, 0x0000, 0x0000, 0x00007fff];
+         sf_extension = 0
+         sdr_addrs = "addr=192.168.20.2,second_addr=192.168.20.2,clock_source=internal,time_source=internal"
+    }
 );
 
 THREAD_STRUCT = (
