--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.162PRB.2x2.oxgrf.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.162PRB.2x2.oxgrf.conf
@@ -107,7 +107,7 @@ gNBs =
           prach_msg1_FDM                                            = 0;
           prach_msg1_FrequencyStart                                 = 0;
           zeroCorrelationZoneConfig                                 = 12;
-          preambleReceivedTargetPower                               = -104;
+          preambleReceivedTargetPower                               = -84;
 #preamblTransMax (0...10) = (3,4,5,6,7,8,10,20,50,100,200)
           preambleTransMax                                          = 6;
 #powerRampingStep
@@ -153,7 +153,7 @@ gNBs =
         initialULBWPstartSymbolAndLength_2    = 52;
 
         msg3_DeltaPreamble                                          = 1;
-        p0_NominalWithGrant                                         =-90;
+        p0_NominalWithGrant                                         =-70;
 
 # pucch-ConfigCommon setup :
 # pucchGroupHopping
@@ -206,9 +206,8 @@ gNBs =
         SCTP_OUTSTREAMS = 2;
     };
 
-
     ////////// AMF parameters:
-    amf_ip_address      = ( { ipv4       = "172.11.200.14";
+    amf_ip_address      = ( { ipv4       = "192.168.199.231";
                               ipv6       = "192:168:30::17";
                               active     = "yes";
                               preference = "ipv4";
@@ -218,10 +217,10 @@ gNBs =
 
     NETWORK_INTERFACES :
     {
-        GNB_INTERFACE_NAME_FOR_NG_AMF            = "br-c5d78b75e37c";
-        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "172.11.200.1";
-        GNB_INTERFACE_NAME_FOR_NGU               = "br-c5d78b75e37c";
-        GNB_IPV4_ADDRESS_FOR_NGU                 = "172.11.200.1";
+        GNB_INTERFACE_NAME_FOR_NG_AMF            = "eno1";
+        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.199.223/24";
+        GNB_INTERFACE_NAME_FOR_NGU               = "eno1";
+        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.199.223/24";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
     };
 
@@ -266,6 +265,7 @@ RUs = (
   clock_src = "internal";
 }
 );
+
 
 THREAD_STRUCT = (
 {
