modify config file for 106PRB for b210 n310 oxgrf, 162 for oxgrf

--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.oxgrf.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.oxgrf.conf
@@ -125,14 +125,14 @@ gNBs =
         restrictedSetConfig                                         = 0,
 
         msg3_DeltaPreamble                                          = 1;
-        p0_NominalWithGrant                                         =-70;
+        p0_NominalWithGrant                                         =-80;
 
 # pucch-ConfigCommon setup :
 # pucchGroupHopping
 # 0 = neither, 1= group hopping, 2=sequence hopping
         pucchGroupHopping                                           = 0;
         hoppingId                                                   = 40;
-        p0_nominal                                                  = -70;
+        p0_nominal                                                  = -80;
 # ssb_PositionsInBurs_BitmapPR
 # 1=short, 2=medium, 3=long
       ssb_PositionsInBurst_PR                                       = 2;
@@ -180,7 +180,7 @@ gNBs =
 
 
     ////////// AMF parameters:
-    amf_ip_address      = ( { ipv4       = "192.168.199.231";
+    amf_ip_address      = ( { ipv4       = "172.11.200.14";
                               ipv6       = "192:168:30::17";
                               active     = "yes";
                               preference = "ipv4";
@@ -190,10 +190,10 @@ gNBs =
 
     NETWORK_INTERFACES :
     {
-        GNB_INTERFACE_NAME_FOR_NG_AMF            = "eno1";
-        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.199.223/24";
-        GNB_INTERFACE_NAME_FOR_NGU               = "eno1";
-        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.199.223/24";
+        GNB_INTERFACE_NAME_FOR_NG_AMF            = "docker-openxg";
+        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "172.11.200.1";
+        GNB_INTERFACE_NAME_FOR_NGU               = "docker-openxg";
+        GNB_IPV4_ADDRESS_FOR_NGU                 = "172.11.200.1";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
     };
 
@@ -226,11 +226,11 @@ RUs = (
   local_rf       = "yes"
   nb_tx          = 1
   nb_rx          = 1
-  att_tx         = 85
+  att_tx         = 89
   att_rx         = 0;
   bands          = [78];
   max_pdschReferenceSignalPower = -27;
-  max_rxgain                    = 65;
+  max_rxgain                    = 60;
   sf_extension                  = 0;
   eNB_instances  = [0];
   #beamforming 1x4 matrix:
