--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.n310.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.n310.conf
@@ -180,7 +180,7 @@ gNBs =
 
 
     ////////// AMF parameters:
-    amf_ip_address      = ( { ipv4       = "192.168.199.231";
+    amf_ip_address      = ( { ipv4       = "172.11.200.14";
                               ipv6       = "192:168:30::17";
                               active     = "yes";
                               preference = "ipv4";
@@ -191,9 +191,9 @@ gNBs =
     NETWORK_INTERFACES :
     {
         GNB_INTERFACE_NAME_FOR_NG_AMF            = "eno1";
-        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.199.223/24";
+        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "docker-openxg";
         GNB_INTERFACE_NAME_FOR_NGU               = "eno1";
-        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.199.223/24";
+        GNB_IPV4_ADDRESS_FOR_NGU                 = "docker-openxg";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
     };
 
