--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.usrpb210.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.106PRB.usrpb210.conf
@@ -177,9 +177,8 @@ gNBs =
         SCTP_OUTSTREAMS = 2;
     };
 
-
     ////////// AMF parameters:
-    amf_ip_address      = ( { ipv4       = "192.168.199.111";
+    amf_ip_address      = ( { ipv4       = "172.11.200.14";
                               ipv6       = "192:168:30::17";
                               active     = "yes";
                               preference = "ipv4";
@@ -190,9 +189,9 @@ gNBs =
     NETWORK_INTERFACES :
     {
         GNB_INTERFACE_NAME_FOR_NG_AMF            = "eno1";
-        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.199.220/24";
+        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "docker-openxg";
         GNB_INTERFACE_NAME_FOR_NGU               = "eno1";
-        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.199.220/24";
+        GNB_IPV4_ADDRESS_FOR_NGU                 = "docker-openxg";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
     };
 
