--- a/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.162PRB.2x2.oxgrf.conf
+++ b/targets/PROJECTS/GENERIC-NR-5GC/CONF/gnb.sa.band78.fr1.162PRB.2x2.oxgrf.conf
@@ -207,7 +207,7 @@ gNBs =
     };
 
     ////////// AMF parameters:
-    amf_ip_address      = ( { ipv4       = "192.168.199.231";
+    amf_ip_address      = ( { ipv4       = "172.11.200.14";
                               ipv6       = "192:168:30::17";
                               active     = "yes";
                               preference = "ipv4";
@@ -217,10 +217,10 @@ gNBs =
 
     NETWORK_INTERFACES :
     {
-        GNB_INTERFACE_NAME_FOR_NG_AMF            = "eno1";
-        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "192.168.199.223/24";
-        GNB_INTERFACE_NAME_FOR_NGU               = "eno1";
-        GNB_IPV4_ADDRESS_FOR_NGU                 = "192.168.199.223/24";
+        GNB_INTERFACE_NAME_FOR_NG_AMF            = "docker-openxg";
+        GNB_IPV4_ADDRESS_FOR_NG_AMF              = "172.11.200.1";
+        GNB_INTERFACE_NAME_FOR_NGU               = "docker-openxg";
+        GNB_IPV4_ADDRESS_FOR_NGU                 = "172.11.200.1";
         GNB_PORT_FOR_S1U                         = 2152; # Spec 2152
     };
 
@@ -252,11 +252,11 @@ RUs = (
   local_rf       = "yes"
   nb_tx          = 2
   nb_rx          = 2
-  att_tx         = 85
+  att_tx         = 89
   att_rx         = 0;
   bands          = [78];
   max_pdschReferenceSignalPower = -27;
-  max_rxgain                    = 65;
+  max_rxgain                    = 60;
   sf_extension                  = 0;
   eNB_instances  = [0];
   ##beamforming 1x4 matrix:
